[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iommu"
dynamic = ["version"]
description = "Inspect and configure the IOMMU in Linux"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    {name = "Simon A. F. Lund", email = "os@safl.dk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
iommu = "iommu.iommu:main"

[project.urls]
Homepage = "https://github.com/safl/iommu"
Repository = "https://github.com/safl/iommu"
Issues = "https://github.com/safl/iommu/issues"

[tool.setuptools.dynamic]
version = {attr = "iommu.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99
